Adds dbquery